Set micromamba version

--- a/.github/workflows/voici.yml
+++ b/.github/workflows/voici.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install mamba
         uses: mamba-org/setup-micromamba@v1
         with:
-          micromamba-version: "1.5.6"
+          micromamba-version: "1.5.6-0"
           environment-file: "voici/build-environment.yml"
 
       - name: Build the JupyterLite site
