--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,26 +6,54 @@ on:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python: ["3.9", "3.10", "3.11", "3.12"]
-    uses: MREYE-LUMC/PAROS/.github/workflows/setup.yml@main
-    with:
-      python-version: ${{ matrix.python }}
     steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python }}
+          cache: pip
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install hatch
       - name: Build PAROS
         run: hatch build
 
   format:
     name: Format and lint
-    uses: MREYE-LUMC/PAROS/.github/workflows/setup.yml@main
+    runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python }}
+          cache: pip
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install hatch
       - name: Format and lint
         run: hatch fmt --check
 
   jupyter:
     name: Test Jupyter notebooks
-    uses: MREYE-LUMC/PAROS/.github/workflows/setup.yml@main
+    runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python }}
+          cache: pip
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install hatch
       - name: Format and lint
         run: hatch run jupyter:run-all
