--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,12 +9,21 @@ permissions:
 
 jobs:
   build:
-    uses: MREYE-LUMC/PAROS/.github/workflows/setup.yml@main
+    runs-on: ubuntu-latest
     
     permissions:
       contents: read
 
     steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
       - name: Build package
         run: python -m build
       - name: Upload dist
