--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -15,14 +15,22 @@ jobs:
       contents: read
 
     steps:
-    - uses: MREYE-LUMC/PAROS/.github/workflows/setup.yml@main
-    - name: Build package
-      run: python -m build
-    - name: Upload dist
-      uses: actions/upload-artifact@v4
-      with:
-        name: zospy_dist
-        path: "dist/"
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+      - name: Build package
+        run: python -m build
+      - name: Upload dist
+        uses: actions/upload-artifact@v4
+        with:
+          name: zospy_dist
+          path: "dist/"
         
   publish_to_testpypi:
     name: Publish to PyPI
@@ -33,10 +41,10 @@ jobs:
       id-token: write
 
     steps:
-    - name: Download dist
-      uses: actions/download-artifact@v4
-      with:
-        name: zospy_dist
-        path: dist
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@v1.8.11
+      - name: Download dist
+        uses: actions/download-artifact@v4
+        with:
+          name: zospy_dist
+          path: dist
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@v1.8.11
