--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,13 +29,14 @@ jobs:
       - name: Upload dist
         uses: actions/upload-artifact@v4
         with:
-          name: zospy_dist
+          name: paros_dist
           path: "dist/"
         
   publish_to_pypi:
     name: Publish to PyPI
     runs-on: ubuntu-latest
     environment: PyPI
+    needs: build
 
     permissions:
       id-token: write
@@ -44,7 +45,7 @@ jobs:
       - name: Download dist
         uses: actions/download-artifact@v4
         with:
-          name: zospy_dist
+          name: paros_dist
           path: dist
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@v1.8.11
@@ -62,7 +63,7 @@ jobs:
       - name: Download dist
         uses: actions/download-artifact@v4
         with:
-          name: zospy_dist
+          name: paros_dist
           path: dist
       - name: Upload wheels to GitHub release
         uses: svenstaro/upload-release-action@2.7.0
