--- a/.github/workflows/voici.yml
+++ b/.github/workflows/voici.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.10"
 
       - name: Install mamba
         uses: mamba-org/setup-micromamba@v1
@@ -33,7 +33,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./voici/dist
 
   deploy:
     needs: build
