--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -49,3 +49,5 @@ jobs:
           path: dist
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@v1.8.11
+        with:
+          repository-url: https://test.pypi.org/legacy/
