--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,19 +15,14 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
+      - uses: actions/checkout@v6
+      - name: Set up uv
+        id: setup-uv
+        uses: astral-sh/setup-uv@v7
       - name: Build package
-        run: python -m build
+        run: uvx hatch build
       - name: Upload dist
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: paros_dist
           path: "dist/"
@@ -43,12 +38,15 @@ jobs:
 
     steps:
       - name: Download dist
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: paros_dist
           path: dist
+      - name: Set up uv
+        id: setup-uv
+        uses: astral-sh/setup-uv@v7
       - name: Publish package
-        uses: pypa/gh-action-pypi-publish@v1.8.11
+        run: uv publish
         
   upload_to_github:
     name: Upload to GitHub
@@ -61,18 +59,18 @@ jobs:
 
     steps:
       - name: Download dist
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: paros_dist
           path: dist
       - name: Upload wheels to GitHub release
-        uses: svenstaro/upload-release-action@2.7.0
+        uses: svenstaro/upload-release-action@2.11.3
         with:
           tag: ${{ github.ref }}
           file: "dist/*.whl"
           file_glob: true
       - name: Upload dist to GitHub release
-        uses: svenstaro/upload-release-action@2.7.0
+        uses: svenstaro/upload-release-action@2.11.3
         with:
           tag: ${{ github.ref }}
           file: "dist/*.tar.gz"
