Add Python matrix to jupyter test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,19 @@ name: Continuous Integration
 
 on:
   - push
-  - pull_request
+
+.python-versions: &python-versions
+  - "3.9"
+  - "3.10"
+  - "3.11"
+  - "3.12"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.9", "3.10", "3.11", "3.12"]
+        python: *python-versions
     steps:
       - uses: actions/checkout@v6
       - name: Set up uv
@@ -32,6 +37,9 @@ jobs:
   jupyter:
     name: Test Jupyter notebooks
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python: *python-versions
     steps:
       - uses: actions/checkout@v6
       - name: Set up uv
