--- a/ruff_defaults.toml
+++ b/ruff_defaults.toml
@@ -656,7 +656,7 @@ select = [
 ban-relative-imports = "all"
 
 [lint.isort]
-known-first-party = ["paros"]
+known-first-party = ["PAROS"]
 
 [lint.flake8-pytest-style]
 fixture-parentheses = false
