--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Publish to PyPI
 
 on:
   release:
-    types: [released]
+    types: [released, prereleased]
 
 permissions:
   contents: read
@@ -10,28 +10,23 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     permissions:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
+      - uses: actions/checkout@v6
+      - name: Set up uv
+        id: setup-uv
+        uses: astral-sh/setup-uv@v7
       - name: Build package
-        run: python -m build
+        run: uv build
       - name: Upload dist
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: paros_dist
           path: "dist/"
-        
+
   publish_to_pypi:
     name: Publish to PyPI
     runs-on: ubuntu-latest
@@ -43,36 +38,39 @@ jobs:
 
     steps:
       - name: Download dist
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: paros_dist
           path: dist
+      - name: Set up uv
+        id: setup-uv
+        uses: astral-sh/setup-uv@v7
       - name: Publish package
-        uses: pypa/gh-action-pypi-publish@v1.8.11
-        
+        run: uv publish
+
   upload_to_github:
     name: Upload to GitHub
     runs-on: ubuntu-latest
     if: github.event_name == 'release'
     needs: build
-    
+
     permissions:
       contents: write
 
     steps:
       - name: Download dist
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: paros_dist
           path: dist
       - name: Upload wheels to GitHub release
-        uses: svenstaro/upload-release-action@2.7.0
+        uses: svenstaro/upload-release-action@2.11.3
         with:
           tag: ${{ github.ref }}
           file: "dist/*.whl"
           file_glob: true
       - name: Upload dist to GitHub release
-        uses: svenstaro/upload-release-action@2.7.0
+        uses: svenstaro/upload-release-action@2.11.3
         with:
           tag: ${{ github.ref }}
           file: "dist/*.tar.gz"
