--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: &python-versions ["3.9", "3.10", "3.11", "3.12"]
+        python: &python-versions ["3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v6
       - name: Set up uv
